Fixed overflow-scroll problem

--- a/Public/www/css/styles.css
+++ b/Public/www/css/styles.css
@@ -13,6 +13,10 @@ html, body {
   height: 100%;
   width: 100%;
   min-height: 537px;
+  overflow: scroll;
+}
+
+#app-container.clearfix {
   overflow: hidden;
 }
 
@@ -101,7 +105,7 @@ html, body {
   list-style-type: none;
   padding: 0px;
   overflow: scroll;
-  height: 85%;
+  height: 34%;
 }
 
 .tabs-content li {
